[package]
name = "planetary"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-deque = "0.8.6"
fastrand = "2.3.0"
num_cpus = "1.16.0"
tracing = { version = "0.1.41", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
